--- a/src/main/resources/assets/betternether/lang/ru_ru.lang
+++ b/src/main/resources/assets/betternether/lang/ru_ru.lang
@@ -158,3 +158,7 @@ tile.stalagnate_planks_slab_half.name=Сталагнатовая плита
 tile.stalagnate_planks_stairs.name=Сталагнатовые ступени
 tile.stalagnate_seed.name=Семя сталагната
 tile.wart_seed.name=Семя нароста
+
+commands.findnethercity.usage.console=Не указаны координаты
+commands.findnethercity.usage.coordinates=Неверный формат координат
+commands.findnethercity.usage=Неверное число аргументов, допустимо /findNetherCity или /findNetherCity x y z
