Stalagnate & reeds blocks, drop fix

--- a/src/main/resources/assets/betternether/lang/en_us.json
+++ b/src/main/resources/assets/betternether/lang/en_us.json
@@ -38,7 +38,7 @@
 	"block.betternether.bone_mushroom": "Bone Mushroom Spores",
 	"block.betternether.bone_plate": "Bone Pressure Plate",
 	"block.betternether.bone_reed_door": "Bone-Reed Door",
-	"block.betternether.bone_slab_half": "Bone Slab",
+	"block.betternether.bone_slab": "Bone Slab",
 	"block.betternether.bone_stairs": "Bone Stairs",
 	"block.betternether.bone_block.betternether": "Bone Tile",
 	"block.betternether.bone_wall": "Bone Wall",
@@ -60,7 +60,7 @@
 	"block.betternether.cincinnasite_pillar": "Cincinnasite Pillar",
 	"block.betternether.cincinnasite_plate": "Cincinnasite Plate",
 	"block.betternether.cincinnasite_pot": "Cincinnasite Pot",
-	"block.betternether.cincinnasite_slab_half": "Cincinnasite Slab",
+	"block.betternether.cincinnasite_slab": "Cincinnasite Slab",
 	"block.betternether.cincinnasite_stairs": "Cincinnasite Stairs",
 	"block.betternether.cincinnasite_tile_large": "Large Cincinnasite Tile",
 	"block.betternether.cincinnasite_tile_small": "Small Cincinnasite Tile",
@@ -80,7 +80,7 @@
 	"block.betternether.magma_flower": "Magma flower seed",
 
 	"block.betternether.nether_brick_tile_large": "Large Nether Brick Tile",
-	"block.betternether.nether_brick_tile_slab_half": "Small Nether Brick Tile Slab",
+	"block.betternether.nether_brick_tile_slab": "Small Nether Brick Tile Slab",
 	"block.betternether.nether_brick_tile_small": "Small Nether Brick Tile",
 	"block.betternether.nether_brick_tile_stairs": "Small Nether Brick Tile Stairs",
 	"block.betternether.nether_brick_wall": "Nether Brick Wall",
@@ -142,8 +142,10 @@
 	"block.betternether.reeds_gate": "Reeds Gate",
 	"block.betternether.reeds_ladder": "Reeds Ladder",
 	"block.betternether.reeds_plate": "Reeds Pressure Plate",
-	"block.betternether.reeds_slab_half": "Reeds Slab",
+	"block.betternether.reeds_slab": "Reeds Slab",
 	"block.betternether.reeds_stairs": "Reeds Stairs",
+	"block.betternether.reeds_door": "Reeds Door",
+	"block.betternether.reeds_trapdoor": "Reeds Trapdoor",
 
 	"block.betternether.smoker": "Smoker",
 
@@ -156,8 +158,10 @@
 	"block.betternether.stalagnate_planks_fence": "Stalagnate Fence",
 	"block.betternether.stalagnate_planks_gate": "Stalagnate Gate",
 	"block.betternether.stalagnate_planks_plate": "Stalagnate Pressure Plate",
-	"block.betternether.stalagnate_planks_slab_half": "Stalagnate Slab",
+	"block.betternether.stalagnate_planks_slab": "Stalagnate Slab",
 	"block.betternether.stalagnate_planks_stairs": "Stalagnate Stairs",
+	"block.betternether.stalagnate_planks_door": "Stalagnate Door",
+	"block.betternether.stalagnate_planks_trapdoor": "Stalagnate Trapdoor",
 	"block.betternether.stalagnate_seed": "Stalagnate Seed",
 	"block.betternether.wart_seed": "Wart Seed",
 
