Color glass, furnaces, tile entities, fixes, class movement

--- a/src/main/resources/assets/betternether/lang/en_us.json
+++ b/src/main/resources/assets/betternether/lang/en_us.json
@@ -4,18 +4,18 @@
 
 	"entity.firefly": "Firefly",
 
-	"item.black_apple": "Black Apple",
+	"item.betternether.black_apple": "Black Apple",
 
-	"item.cincinnasite": "Cincinnasite",
-	"item.cincinnasite_axe": "Cincinnasite Axe",
-	"item.cincinnasite_axe_diamond": "Cincinnasite-Diamond Axe",
-	"item.cincinnasite_pickaxe": "Cincinnasite Pickaxe",
-	"item.cincinnasite_pickaxe_diamond": "Cincinnasite-Diamond Pickaxe",
+	"item.betternether.cincinnasite": "Cincinnasite",
+	"item.betternether.cincinnasite_axe": "Cincinnasite Axe",
+	"item.betternether.cincinnasite_axe_diamond": "Cincinnasite-Diamond Axe",
+	"item.betternether.cincinnasite_pickaxe": "Cincinnasite Pickaxe",
+	"item.betternether.cincinnasite_pickaxe_diamond": "Cincinnasite-Diamond Pickaxe",
 
-	"item.stalagnate_bowl": "Stalagnate Bowl",
-	"item.stalagnate_bowl_apple": "Black Apple",
-	"item.stalagnate_bowl_mushroom": "Mushroom Stew",
-	"item.stalagnate_bowl_wart": "Wart Soup",
+	"item.betternether.stalagnate_bowl": "Stalagnate Bowl",
+	"item.betternether.stalagnate_bowl_apple": "Black Apple",
+	"item.betternether.stalagnate_bowl_mushroom": "Mushroom Stew",
+	"item.betternether.stalagnate_bowl_wart": "Wart Soup",
 
 	"itemGroup.betternether.items": "Better Nether",
 
@@ -101,38 +101,38 @@
 	"block.betternether.quartz_glass_framed": "Framed Quartz Glass",
 	"block.betternether.quartz_glass_framed_pane": "Framed Quartz Glass Pane",
 	"block.betternether.quartz_glass_pane": "Quartz Glass Pane",
-	"block.betternether.quartz_stained_glass.black": "Quartz Stained Glass Black",
-	"block.betternether.quartz_stained_glass.blue": "Quartz Stained Glass Blue",
-	"block.betternether.quartz_stained_glass.brown": "Quartz Stained Glass Brown",
-	"block.betternether.quartz_stained_glass.cyan": "Quartz Stained Glass Cyan",
-	"block.betternether.quartz_stained_glass.gray": "Quartz Stained Glass Gray",
-	"block.betternether.quartz_stained_glass.green": "Quartz Stained Glass Green",
-	"block.betternether.quartz_stained_glass.lightBlue": "Quartz Stained Glass Light Blue",
-	"block.betternether.quartz_stained_glass.lime": "Quartz Stained Glass Lime",
-	"block.betternether.quartz_stained_glass.magenta": "Quartz Stained Glass Magenta",
-	"block.betternether.quartz_stained_glass.orange": "Quartz Stained Glass Orange",
-	"block.betternether.quartz_stained_glass.pink": "Quartz Stained Glass Pink",
-	"block.betternether.quartz_stained_glass.purple": "Quartz Stained Glass Purple",
-	"block.betternether.quartz_stained_glass.red": "Quartz Stained Glass Red",
-	"block.betternether.quartz_stained_glass.silver": "Quartz Stained Glass Silver",
-	"block.betternether.quartz_stained_glass.white": "Quartz Stained Glass White",
-	"block.betternether.quartz_stained_glass.yellow": "Quartz Stained Glass Yellow",
-	"block.betternether.quartz_stained_glass_framed.black": "Framed Quartz Stained Glass Black",
-	"block.betternether.quartz_stained_glass_framed.blue": "Framed Quartz Stained Glass Blue",
-	"block.betternether.quartz_stained_glass_framed.brown": "Framed Quartz Stained Glass Brown",
-	"block.betternether.quartz_stained_glass_framed.cyan": "Framed Quartz Stained Glass Cyan",
-	"block.betternether.quartz_stained_glass_framed.gray": "Framed Quartz Stained Glass Gray",
-	"block.betternether.quartz_stained_glass_framed.green": "Framed Quartz Stained Glass Green",
-	"block.betternether.quartz_stained_glass_framed.lightBlue": "Framed Quartz Stained Glass Light Blue",
-	"block.betternether.quartz_stained_glass_framed.lime": "Framed Quartz Stained Glass Lime",
-	"block.betternether.quartz_stained_glass_framed.magenta": "Framed Quartz Stained Glass Magenta",
-	"block.betternether.quartz_stained_glass_framed.orange": "Framed Quartz Stained Glass Orange",
-	"block.betternether.quartz_stained_glass_framed.pink": "Framed Quartz Stained Glass Pink",
-	"block.betternether.quartz_stained_glass_framed.purple": "Framed Quartz Stained Glass Purple",
-	"block.betternether.quartz_stained_glass_framed.red": "Framed Quartz Stained Glass Red",
-	"block.betternether.quartz_stained_glass_framed.silver": "Framed Quartz Stained Glass Silver",
-	"block.betternether.quartz_stained_glass_framed.white": "Framed Quartz Stained Glass White",
-	"block.betternether.quartz_stained_glass_framed.yellow": "Framed Quartz Stained Glass Yellow",
+	"block.betternether.quartz_glass_black": "Quartz Glass Black",
+	"block.betternether.quartz_glass_blue": "Quartz Glass Blue",
+	"block.betternether.quartz_glass_brown": "Quartz Glass Brown",
+	"block.betternether.quartz_glass_cyan": "Quartz Glass Cyan",
+	"block.betternether.quartz_glass_gray": "Quartz Glass Gray",
+	"block.betternether.quartz_glass_green": "Quartz Glass Green",
+	"block.betternether.quartz_glass_light_blue": "Quartz Glass Light Blue",
+	"block.betternether.quartz_glass_lime": "Quartz Glass Lime",
+	"block.betternether.quartz_glass_magenta": "Quartz Glass Magenta",
+	"block.betternether.quartz_glass_orange": "Quartz Glass Orange",
+	"block.betternether.quartz_glass_pink": "Quartz Glass Pink",
+	"block.betternether.quartz_glass_purple": "Quartz Glass Purple",
+	"block.betternether.quartz_glass_red": "Quartz Glass Red",
+	"block.betternether.quartz_glass_light_gray": "Quartz Glass Light Gray",
+	"block.betternether.quartz_glass_white": "Quartz Glass White",
+	"block.betternether.quartz_glass_yellow": "Quartz Glass Yellow",
+	"block.betternether.quartz_glass_framed_black": "Framed Quartz Glass Black",
+	"block.betternether.quartz_glass_framed_blue": "Framed Quartz Glass Blue",
+	"block.betternether.quartz_glass_framed_brown": "Framed Quartz Glass Brown",
+	"block.betternether.quartz_glass_framed_cyan": "Framed Quartz Glass Cyan",
+	"block.betternether.quartz_glass_framed_gray": "Framed Quartz Glass Gray",
+	"block.betternether.quartz_glass_framed_green": "Framed Quartz Glass Green",
+	"block.betternether.quartz_glass_framed_light_blue": "Framed Quartz Glass Light Blue",
+	"block.betternether.quartz_glass_framed_lime": "Framed Quartz Glass Lime",
+	"block.betternether.quartz_glass_framed_magenta": "Framed Quartz Glass Magenta",
+	"block.betternether.quartz_glass_framed_orange": "Framed Quartz Glass Orange",
+	"block.betternether.quartz_glass_framed_pink": "Framed Quartz Glass Pink",
+	"block.betternether.quartz_glass_framed_purple": "Framed Quartz Glass Purple",
+	"block.betternether.quartz_glass_framed_red": "Framed Quartz Glass Red",
+	"block.betternether.quartz_glass_framed_light_gray": "Framed Quartz Glass Light Gray",
+	"block.betternether.quartz_glass_framed_white": "Framed Quartz Glass White",
+	"block.betternether.quartz_glass_framed_yellow": "Framed Quartz Glass Yellow",
 
 	"block.betternether.red_mold": "Red Mold",
 
