--- a/src/main/resources/assets/betternether/lang/ru_ru.json
+++ b/src/main/resources/assets/betternether/lang/ru_ru.json
@@ -4,18 +4,18 @@
 
 	"entity.firefly": "Светлячёк",
 
-	"item.black_apple": "Чёрное яблоко",
+	"item.betternether.black_apple": "Чёрное яблоко",
 
-	"item.cincinnasite": "Цинцинназит",
-	"item.cincinnasite_axe": "Цинцинназитовый топор",
-	"item.cincinnasite_axe_diamond": "Цинцинназитово-алмазный топор",
-	"item.cincinnasite_pickaxe": "Цинцинназитовая кирка",
-	"item.cincinnasite_pickaxe_diamond": "Цинцинназитово-алмазная кирка",
+	"item.betternether.cincinnasite": "Цинцинназит",
+	"item.betternether.cincinnasite_axe": "Цинцинназитовый топор",
+	"item.betternether.cincinnasite_axe_diamond": "Цинцинназитово-алмазный топор",
+	"item.betternether.cincinnasite_pickaxe": "Цинцинназитовая кирка",
+	"item.betternether.cincinnasite_pickaxe_diamond": "Цинцинназитово-алмазная кирка",
 
-	"item.stalagnate_bowl": "Сталагнатовая миска",
-	"item.stalagnate_bowl_apple": "Чёрное яблоко",
-	"item.stalagnate_bowl_mushroom": "Грибной суп",
-	"item.stalagnate_bowl_wart": "Суп из наростов",
+	"item.betternether.stalagnate_bowl": "Сталагнатовая миска",
+	"item.betternether.stalagnate_bowl_apple": "Чёрное яблоко",
+	"item.betternether.stalagnate_bowl_mushroom": "Грибной суп",
+	"item.betternether.stalagnate_bowl_wart": "Суп из наростов",
 
 	"itemGroup.betternether.items": "Улучшенный Нижний Мир",
 
@@ -101,38 +101,38 @@
 	"block.betternether.quartz_glass_framed": "Кварцевое стекло в рамке",
 	"block.betternether.quartz_glass_framed_pane": "Панель из кварцевого стекла в рамке",
 	"block.betternether.quartz_glass_pane": "Панель из кварцевого стекла",
-	"block.betternether.quartz_stained_glass.black": "Чёрное кварцевое стекло",
-	"block.betternether.quartz_stained_glass.blue": "Синее кварцевое стекло",
-	"block.betternether.quartz_stained_glass.brown": "Коричневое кварцевое стекло",
-	"block.betternether.quartz_stained_glass.cyan": "Бирюзовое кварцевое стекло",
-	"block.betternether.quartz_stained_glass.gray": "Серое кварцевое стекло",
-	"block.betternether.quartz_stained_glass.green": "Зелёное кварцевое стекло",
-	"block.betternether.quartz_stained_glass.lightBlue": "Голубое кварцевое стекло",
-	"block.betternether.quartz_stained_glass.lime": "Лаймовое кварцевое стекло",
-	"block.betternether.quartz_stained_glass.magenta": "Фиолетовое кварцевое стекло",
-	"block.betternether.quartz_stained_glass.orange": "Оранжевое кварцевое стекло",
-	"block.betternether.quartz_stained_glass.pink": "Розовое кварцевое стекло",
-	"block.betternether.quartz_stained_glass.purple": "Пурпурное кварцевое стекло",
-	"block.betternether.quartz_stained_glass.red": "Красное кварцевое стекло",
-	"block.betternether.quartz_stained_glass.silver": "Светло-серое кварцевое стекло",
-	"block.betternether.quartz_stained_glass.white": "Белое кварцевое стекло",
-	"block.betternether.quartz_stained_glass.yellow": "Жёлтое кварцевое стекло",
-	"block.betternether.quartz_stained_glass_framed.black": "Чёрное кварцевое стекло в рамке",
-	"block.betternether.quartz_stained_glass_framed.blue": "Синее кварцевое стекло в рамке",
-	"block.betternether.quartz_stained_glass_framed.brown": "Коричневое кварцевое стекло в рамке",
-	"block.betternether.quartz_stained_glass_framed.cyan": "Бирюзовое кварцевое стекло в рамке",
-	"block.betternether.quartz_stained_glass_framed.gray": "Серое кварцевое стекло в рамке",
-	"block.betternether.quartz_stained_glass_framed.green": "Зелёное кварцевое стекло в рамке",
-	"block.betternether.quartz_stained_glass_framed.lightBlue": "Голубое кварцевое стекло в рамке",
-	"block.betternether.quartz_stained_glass_framed.lime": "Лаймовое кварцевое стекло в рамке",
-	"block.betternether.quartz_stained_glass_framed.magenta": "Фиолетовое кварцевое стекло в рамке",
-	"block.betternether.quartz_stained_glass_framed.orange": "Оранжевое кварцевое стекло в рамке",
-	"block.betternether.quartz_stained_glass_framed.pink": "Розовое кварцевое стекло в рамке",
-	"block.betternether.quartz_stained_glass_framed.purple": "Пурпурное кварцевое стекло в рамке",
-	"block.betternether.quartz_stained_glass_framed.red": "Красное кварцевое стекло в рамке",
-	"block.betternether.quartz_stained_glass_framed.silver": "Светло-серое кварцевое стекло в рамке",
-	"block.betternether.quartz_stained_glass_framed.white": "Белое кварцевое стекло в рамке",
-	"block.betternether.quartz_stained_glass_framed.yellow": "Жёлтое кварцевое стекло в рамке",
+	"block.betternether.quartz_glass_black": "Чёрное кварцевое стекло",
+	"block.betternether.quartz_glass_blue": "Синее кварцевое стекло",
+	"block.betternether.quartz_glass_brown": "Коричневое кварцевое стекло",
+	"block.betternether.quartz_glass_cyan": "Бирюзовое кварцевое стекло",
+	"block.betternether.quartz_glass_gray": "Серое кварцевое стекло",
+	"block.betternether.quartz_glass_green": "Зелёное кварцевое стекло",
+	"block.betternether.quartz_glass_light_blue": "Голубое кварцевое стекло",
+	"block.betternether.quartz_glass_lime": "Лаймовое кварцевое стекло",
+	"block.betternether.quartz_glass_magenta": "Фиолетовое кварцевое стекло",
+	"block.betternether.quartz_glass_orange": "Оранжевое кварцевое стекло",
+	"block.betternether.quartz_glass_pink": "Розовое кварцевое стекло",
+	"block.betternether.quartz_glass_purple": "Пурпурное кварцевое стекло",
+	"block.betternether.quartz_glass_red": "Красное кварцевое стекло",
+	"block.betternether.quartz_glass_light_gray": "Светло-серое кварцевое стекло",
+	"block.betternether.quartz_glass_white": "Белое кварцевое стекло",
+	"block.betternether.quartz_glass_yellow": "Жёлтое кварцевое стекло",
+	"block.betternether.quartz_glass_framed_black": "Чёрное кварцевое стекло в рамке",
+	"block.betternether.quartz_glass_framed_blue": "Синее кварцевое стекло в рамке",
+	"block.betternether.quartz_glass_framed_brown": "Коричневое кварцевое стекло в рамке",
+	"block.betternether.quartz_glass_framed_cyan": "Бирюзовое кварцевое стекло в рамке",
+	"block.betternether.quartz_glass_framed_gray": "Серое кварцевое стекло в рамке",
+	"block.betternether.quartz_glass_framed_green": "Зелёное кварцевое стекло в рамке",
+	"block.betternether.quartz_glass_framed_light_blue": "Голубое кварцевое стекло в рамке",
+	"block.betternether.quartz_glass_framed_lime": "Лаймовое кварцевое стекло в рамке",
+	"block.betternether.quartz_glass_framed_magenta": "Фиолетовое кварцевое стекло в рамке",
+	"block.betternether.quartz_glass_framed_orange": "Оранжевое кварцевое стекло в рамке",
+	"block.betternether.quartz_glass_framed_pink": "Розовое кварцевое стекло в рамке",
+	"block.betternether.quartz_glass_framed_purple": "Пурпурное кварцевое стекло в рамке",
+	"block.betternether.quartz_glass_framed_red": "Красное кварцевое стекло в рамке",
+	"block.betternether.quartz_glass_framed_light_gray": "Светло-серое кварцевое стекло в рамке",
+	"block.betternether.quartz_glass_framed_white": "Белое кварцевое стекло в рамке",
+	"block.betternether.quartz_glass_framed_yellow": "Жёлтое кварцевое стекло в рамке",
 
 	"block.betternether.red_mold": "Красная плесень",
 
