Mushroom doors & trapdoor models, willow fix, new textures for mushroom stuff

--- a/src/main/resources/assets/betternether/lang/en_us.json
+++ b/src/main/resources/assets/betternether/lang/en_us.json
@@ -217,5 +217,55 @@
 	"item.betternether.cincinnasite_leggings": "Cincinnasite Leggings",
 	"item.betternether.cincinnasite_boots": "Cincinnasite Boots",
 	"item.betternether.cincinnasite_sword": "Cincinnasite Sword",
-	"item.betternether.cincinnasite_sword_diamond": "Cincinnasite-Diamond Sword"
+	"item.betternether.cincinnasite_sword_diamond": "Cincinnasite-Diamond Sword",
+	
+	"item.betternether.spawn_egg_firefly": "Firefly Spawn Egg",
+	"item.betternether.cincinnasite_ingot": "Cincinnasite Ingot",
+	
+	"block.betternether.mushroom_stem": "Mushroom Stem",
+	"block.betternether.mushroom_planks": "Mushroom Planks",
+	"block.betternether.mushroom_stairs": "Mushroom Stairs",
+	"block.betternether.mushroom_slab": "Mushroom Slab",
+	"block.betternether.mushroom_fence": "Mushroom Fence",
+	"block.betternether.mushroom_gate": "Mushroom Gate",
+	"block.betternether.mushroom_button": "Mushroom Button",
+	"block.betternether.mushroom_plate": "Mushroom Plate",
+	"block.betternether.mushroom_trapdoor": "Mushroom Trapdoor",
+	"block.betternether.mushroom_door": "Mushroom Door",
+	
+	"block.betternether.cincinnasite_lantern_small": "Small Cincinnasite Lantern",
+	
+	"block.betternether.quartz_glass_pane_white": "White Quartz Pane",
+	"block.betternether.quartz_glass_pane_orange": "Orange Quartz Pane",
+	"block.betternether.quartz_glass_pane_magenta": "Magenta Quartz Pane",
+	"block.betternether.quartz_glass_pane_light_blue": "Light Blue Quartz Pane",
+	"block.betternether.quartz_glass_pane_yellow": "Yellow Quartz Pane",
+	"block.betternether.quartz_glass_pane_lime": "Lime Quartz Pane",
+	"block.betternether.quartz_glass_pane_pink": "Pink Quartz Pane",
+	"block.betternether.quartz_glass_pane_gray": "Gray Quartz Pane",
+	"block.betternether.quartz_glass_pane_light_gray": "Light Gray Quartz Pane",
+	"block.betternether.quartz_glass_pane_cyan": "Cyan Quartz Pane",
+	"block.betternether.quartz_glass_pane_purple": "Purple Quartz Pane",
+	"block.betternether.quartz_glass_pane_blue": "Blue Quartz Pane",
+	"block.betternether.quartz_glass_pane_brown": "Brown Quartz Pane",
+	"block.betternether.quartz_glass_pane_green": "Green Quartz Pane",
+	"block.betternether.quartz_glass_pane_red": "Red Quartz Pane",
+	"block.betternether.quartz_glass_pane_black": "Black Quartz Pane",
+	
+	"block.betternether.quartz_glass_framed_pane_white": "White Framed Quartz Pane",
+	"block.betternether.quartz_glass_framed_pane_orange": "Orange Framed Quartz Pane",
+	"block.betternether.quartz_glass_framed_pane_magenta": "Magenta Framed Quartz Pane",
+	"block.betternether.quartz_glass_framed_pane_light_blue": "Light Framed Blue Quartz Pane",
+	"block.betternether.quartz_glass_framed_pane_yellow": "Yellow Framed Quartz Pane",
+	"block.betternether.quartz_glass_framed_pane_lime": "Lime Framed Quartz Pane",
+	"block.betternether.quartz_glass_framed_pane_pink": "Pink Framed Quartz Pane",
+	"block.betternether.quartz_glass_framed_pane_gray": "Gray Framed Quartz Pane",
+	"block.betternether.quartz_glass_framed_pane_light_gray": "Light Gray Framed Quartz Pane",
+	"block.betternether.quartz_glass_framed_pane_cyan": "Cyan Framed Quartz Pane",
+	"block.betternether.quartz_glass_framed_pane_purple": "Purple Framed Quartz Pane",
+	"block.betternether.quartz_glass_framed_pane_blue": "Blue Framed Quartz Pane",
+	"block.betternether.quartz_glass_framed_pane_brown": "Brown Framed Quartz Pane",
+	"block.betternether.quartz_glass_framed_pane_green": "Green Framed Quartz Pane",
+	"block.betternether.quartz_glass_framed_pane_red": "Red Framed Quartz Pane",
+	"block.betternether.quartz_glass_framed_pane_black": "Black Framed Quartz Pane"
 }
