--- a/src/main/resources/assets/betternether/lang/ru_ru.json
+++ b/src/main/resources/assets/betternether/lang/ru_ru.json
@@ -217,5 +217,55 @@
 	"item.betternether.cincinnasite_leggings": "Цинцинназитовые поножи",
 	"item.betternether.cincinnasite_boots": "Цинцинназитовые ботинки",
 	"item.betternether.cincinnasite_sword": "Цинцинназитовый меч",
-	"item.betternether.cincinnasite_sword_diamond": "Цинцинназитово-алмазный меч"
+	"item.betternether.cincinnasite_sword_diamond": "Цинцинназитово-алмазный меч",
+	
+	"item.betternether.spawn_egg_firefly": "Яйцо призыва светлячка",
+	"item.betternether.cincinnasite_ingot": "Цинцинназитовый слиток",
+	
+	"block.betternether.mushroom_stem": "Грибной ствол",
+	"block.betternether.mushroom_planks": "Грибные доски",
+	"block.betternether.mushroom_stairs": "Грибные ступени",
+	"block.betternether.mushroom_slab": "Грибная плита",
+	"block.betternether.mushroom_fence": "Грибной забор",
+	"block.betternether.mushroom_gate": "Грибная калитка",
+	"block.betternether.mushroom_button": "Грибная кнопка",
+	"block.betternether.mushroom_plate": "Грибная нажимная плита",
+	"block.betternether.mushroom_trapdoor": "Грибной люк",
+	"block.betternether.mushroom_door": "Грибная дверь",
+	
+	"block.betternether.cincinnasite_lantern_small": "Маленький цинцинназитовый фонарь",
+	
+	"block.betternether.quartz_glass_pane_white": "Белая кварцевая панель",
+	"block.betternether.quartz_glass_pane_orange": "Оранжевая кварцевая панель",
+	"block.betternether.quartz_glass_pane_magenta": "Фиолетовая кварцевая панель",
+	"block.betternether.quartz_glass_pane_light_blue": "Голубая кварцевая панель",
+	"block.betternether.quartz_glass_pane_yellow": "Жёлтая кварцевая панель",
+	"block.betternether.quartz_glass_pane_lime": "Лаймовая кварцевая панель",
+	"block.betternether.quartz_glass_pane_pink": "Розовая кварцевая панель",
+	"block.betternether.quartz_glass_pane_gray": "Серая кварцевая панель",
+	"block.betternether.quartz_glass_pane_light_gray": "Светло-серая кварцевая панель",
+	"block.betternether.quartz_glass_pane_cyan": "Бирюзовая кварцевая панель",
+	"block.betternether.quartz_glass_pane_purple": "Пурпурная кварцевая панель",
+	"block.betternether.quartz_glass_pane_blue": "Синяя кварцевая панель",
+	"block.betternether.quartz_glass_pane_brown": "Коричневая кварцевая панель",
+	"block.betternether.quartz_glass_pane_green": "Зелёная кварцевая панель",
+	"block.betternether.quartz_glass_pane_red": "Красная кварцевая панель",
+	"block.betternether.quartz_glass_pane_black": "Чёрная кварцевая панель",
+	
+	"block.betternether.quartz_glass_framed_pane_white": "Белая кварцевая панель в рамке",
+	"block.betternether.quartz_glass_framed_pane_orange": "Оранжевая кварцевая панель в рамке",
+	"block.betternether.quartz_glass_framed_pane_magenta": "Фиолетовая кварцевая панель в рамке",
+	"block.betternether.quartz_glass_framed_pane_light_blue": "Голубая Blue кварцевая панель в рамке",
+	"block.betternether.quartz_glass_framed_pane_yellow": "Жёлтая кварцевая панель в рамке",
+	"block.betternether.quartz_glass_framed_pane_lime": "Лаймовая кварцевая панель в рамке",
+	"block.betternether.quartz_glass_framed_pane_pink": "Розовая кварцевая панель в рамке",
+	"block.betternether.quartz_glass_framed_pane_gray": "Серая кварцевая панель в рамке",
+	"block.betternether.quartz_glass_framed_pane_light_gray": "Светло-серая кварцевая панель в рамке",
+	"block.betternether.quartz_glass_framed_pane_cyan": "Бирюзовая кварцевая панель в рамке",
+	"block.betternether.quartz_glass_framed_pane_purple": "Пурпурная кварцевая панель в рамке",
+	"block.betternether.quartz_glass_framed_pane_blue": "Синяя кварцевая панель в рамке",
+	"block.betternether.quartz_glass_framed_pane_brown": "Коричневая кварцевая панель в рамке",
+	"block.betternether.quartz_glass_framed_pane_green": "Зелёная кварцевая панель в рамке",
+	"block.betternether.quartz_glass_framed_pane_red": "Красная кварцевая панель в рамке",
+	"block.betternether.quartz_glass_framed_pane_black": "Чёрная кварцевая панель в рамке"
 }
